# unifei-mosaicosim

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  MosaicoSIM.html  MosaicoSIM.js  MosaicoSIM.wasm  README.md  _config.yml  b.txt  build.bat  build.txt  compile_flags.txt  index.html  tfg.sublime-workspace  unifei-tfg.sln
inc/sokol/demo/: main.c
include/imgui/: imgui_single_file.h
include/nfd/: nfd_win.cpp
include/sokol/: sokol_gp.h
res/fonts/: fontawesome85.h  segoeui.h
src/: gui.cpp  gui.h  image.cpp  image.h  input.cpp  input.h  main.cpp  point.cpp  point.h  shape.cpp  shape.h  shell.html  tfg_gui.cpp  tfg_image.cpp  tfg_interface.cpp  tfg_main.cpp  tfg_mosaicosim.cpp  tfg_mosaicosim.hpp  tfg_types.h  tfg_types.hpp  tfg_workspace.cpp  triangle.cpp  triangle.h  types.h
tfg-setup/: tfg-setup.vdproj
unifei-tfg/: MosaicoSIM.html  MosaicoSIM.js  MosaicoSIM.wasm  build.bat  unifei-tfg.vcxproj  unifei-tfg.vcxproj.filters
unifei-tfg/include/barcooriginal/: tfgBarcoOriginal.h
unifei-tfg/include/fonts/: segoeui.h
unifei-tfg/include/nfd/: nfd_win.cpp
unifei-tfg/include/parson/: parson.cpp  parson.h
unifei-tfg/include/sokol/: sokol_gl.h
unifei-tfg/src/: tfgBackgroundImage.cpp  tfgBackgroundImage.h  tfgControlBar.cpp  tfgControlBar.h  tfgDebugInfo.cpp  tfgDebugInfo.h  tfgMain.cpp  tfgMenuBar.cpp  tfgMenuBar.h  tfgMouse.cpp  tfgMouse.h  tfgObject.h  tfgProgram.cpp  tfgProgram.h  tfgRect.cpp  tfgRect.h  tfgShape.cpp  tfgShape.h  tfgTypes.h  tfgVector.cpp  tfgVector.h
